@@ -56,7 +56,6 @@ misc/openvas_proctitle.[c|h]: GPLv2+
 misc/openvas_server.[c|h]: GPLv2+
 misc/openvas_ssh_login.[c|h]: GPLv2+
 misc/openvas_uuid.[c|h]: GPLv2+
-misc/otp.h: GPLv2+
 misc/pcap.c: LGPLv2+
 misc/pcap_openvas.h: LGPLv2+
 misc/plugutils.[c|h]: LGPLv2+
